Isabelle NEWS -- history user-relevant changes
==============================================

New in this Isabelle version
----------------------------

*** General ***

* Symbol \<chi> is now considered a letter.  Potential INCOMPATIBILITY
in identifier syntax etc.


*** Pure ***

* Command "instance" now takes list of definitions in the same manner
as the "definition" command.  Most notably, object equality is now
possible.  Type inference is more canonical than it used to be.
INCOMPATIBILITY: in some cases explicit type annotations are required.


*** HOL ***

* New primrec package.  Specification syntax conforms in style to
  definition/function/....  The "primrec" command distinguished old-style
  and new-style specifications by syntax.  The old primrec package is
  now named OldPrimrecPackage.

* Library/Multiset: {#a, b, c#} abbreviates {#a#} + {#b#} + {#c#}.

* Constants "card", "internal_split", "option_map" now with authentic
syntax.

* Definitions subset_def, psubset_def, set_diff_def, Compl_def,
le_bool_def, less_bool_def, le_fun_def, less_fun_def, inf_bool_def,
sup_bool_def, Inf_bool_def, Sup_bool_def, inf_fun_def, sup_fun_def,
Inf_fun_def, Sup_fun_def, inf_set_def, sup_set_def, Inf_set_def,
Sup_set_def, le_def, less_def, option_map_def now with object
equality.



New in Isabelle2007 (November 2007)
-----------------------------------

*** General ***

* More uniform information about legacy features, notably a
warning/error of "Legacy feature: ...", depending on the state of the
tolerate_legacy_features flag (default true). FUTURE INCOMPATIBILITY:
legacy features will disappear eventually.

* Theory syntax: the header format ``theory A = B + C:'' has been
discontinued in favour of ``theory A imports B C begin''.  Use isatool
fixheaders to convert existing theory files.  INCOMPATIBILITY.

* Theory syntax: the old non-Isar theory file format has been
discontinued altogether.  Note that ML proof scripts may still be used